# TerminalCommunicator

./: .drone.yml  .env.prod  .env.prod.db  .gitignore  Dockerfile  Dockerfile.prod  README.MD  db.sqlite3  do_migration.cmd  docker-compose-prod.yml  docker-compose.prod.yml  docker-entrypoint.sh  manage.py  notify.sh  requaremits.txt  requirements.txt
Clients/GCC.Client/: CMakeLists.txt  Dockerfile  app.cpp  build_openwrt.sh  ldnode.mips  readme.md
Clients/GCC.Client/openwrt_profile/: openwrt_18.config  openwrt_21.02.config  openwrt_master.config  openwrt_xiaomi_compile.config
Clients/GCC.Client/src/: app.cpp  client.h  credential.h  log.h  timeout.h  worker.h
Clients/GCC.Client/src/clients/: client_curl.h  client_socket.h
Clients/GCC.Client/src/providers/: exec_provider.h  get_provider.h
Clients/Poco.Client/: CMakeLists.txt  app.cpp
Clients/Poco.Client/src/: credential.h  log.h  timeout.h  worker.h
Clients/Poco.Client/src/clients/: communicator_client.h
Clients/Poco.Client/src/providers/: get_provider.h
Clients/Python.Client/: Dockerfile  app.py  requirements.txt
Clients/Python.OpenWrtClient/: node  node.py
Clients/Python.Provider/: communicator_provider.py
Communicator/: admin.py  apps.py  models.py  urls.py  views.py
Communicator/api/: SwaggerAPICodec.py  serializers.py
Communicator/migrations/: 0001_initial.py  0002_auto_20211030_1913.py  0003_terminal_owner.py  (+13 more)
TerminalCommunicator/: asgi.py  settings.py  urls.py  wsgi.py
Test.CommunicatorClient/: http-client.env.json  rest-api.http
nginx/: nginx.conf
static_files/: db.sqlite3
(+9 files in other folders)
